--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -7,6 +7,18 @@ branches:
       required_linear_history: true
       required_status_checks:
         strict: true
+repository:
+  has_wiki: true
+  has_issues: true
+  has_projects: true
+  has_downloads: true
+  default_branch: main
+  allow_squash_merge: true
+  allow_rebase_merge: true
+  allow_merge_commit: false
+  delete_branch_on_merge: true
+  enable_vulnerability_alerts: true
+  enable_automated_security_fixes: true
 labels:
 - color: '#000000'
   description: This issue has been abdandoned
